* Fixed bug where having a colon in the subject caused the subject to get truncated
* Added donation link to admin screen
* Fixed bug where #img# captions with double-byte characters were not working
* Fixed bug where default settings were corrupt
* Fixed several bugs in tag detection logic
* Fixed bug where non-base64 and non-quoted-printable sections were not converted to utf-8

= 1.4.10 (2012.12.11) =
* Fixed warning when there is no subject
* Removed all script and style tags from HTML content in place of XSS warning
* Removed XSS warning
* Fixed bug where post type was not being detected if only case is different
* Fixed bug with custom post type and leading spaces in the subject
* Fixed bug where custom fields were not being populated for images

= 1.4.9 (2012.12.10) =
* Fixed bug where date, author, etc didn't get set.
* Fixed bug where Postie was treating attached images as strings
* Fixed bug where inline images were not being attached correctly
* Fixed bug where the subject was not being decoded correctly if the charset was different from the system charset
* Fixed bug where base64 strings were being double decoded.

= 1.4.8 (2012.12.09) =
* Fixed collisions with simple_html_dom
* Fixed bug when trying to get file name from MIME part
* Fixed bug causing Cannot modify header information warning 

= 1.4.7 (2012.12.07) =
* Fixed bug in cron setup that was preventing Weekly, twice an hour and every ten minute schedules from running.

= 1.4.6 (2012.12.06) =
* Changed XSS check to only emit warning until a better solution can be developed
* Fixed bug where authorized addresses were being checked with case sensitive rather than insensitive.
* Started using PHP Simple HTML DOM Parser http://simplehtmldom.sourceforge.net/
* Started process of logging all error messages to the log as well as the page (where appropriate)
* Fixed bug where "Preferred Text Type" was not displaying the saved value in settings page.